@@ -3,6 +3,7 @@ package com.coloryr.allmusic.server.side.fabric;
 import com.coloryr.allmusic.server.AllMusicFabric;
 import com.coloryr.allmusic.server.TaskItem;
 import com.coloryr.allmusic.server.Tasks;
+import com.coloryr.allmusic.server.codec.PacketCodec;
 import com.coloryr.allmusic.server.core.AllMusic;
 import com.coloryr.allmusic.server.core.objs.config.SaveObj;
 import com.coloryr.allmusic.server.core.objs.enums.ComType;
@@ -14,7 +15,6 @@ import com.coloryr.allmusic.server.core.utils.HudUtils;
 import com.coloryr.allmusic.server.side.fabric.event.MusicAddEvent;
 import com.coloryr.allmusic.server.side.fabric.event.MusicPlayEvent;
 import io.netty.buffer.ByteBuf;
-import io.netty.buffer.Unpooled;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
 import net.minecraft.network.PacketByteBuf;
 import net.minecraft.server.command.CommandOutput;
@@ -23,7 +23,7 @@ import net.minecraft.text.Text;
 import net.minecraft.util.ActionResult;
 
 import java.io.File;
-import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -55,7 +55,7 @@ public class SideFabric extends ISide {
 
     @Override
     public boolean checkPermission(String player, String permission) {
-        var player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
+        ServerPlayerEntity player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
         if (player1 == null)
             return false;
 
@@ -65,7 +65,7 @@ public class SideFabric extends ISide {
     @Override
     public boolean needPlay() {
         int online = getAllPlayer();
-        for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+        for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
             if (AllMusic.getConfig().mutePlayer.contains(player.getName().getString())) {
                 online--;
             }
@@ -76,11 +76,8 @@ public class SideFabric extends ISide {
     @Override
     protected void topSendStop() {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.STOP.ordinal());
-
-                send(player, buf);
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+                send(player, PacketCodec.pack(ComType.STOP, null, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c停止指令发送出错");
@@ -91,12 +88,10 @@ public class SideFabric extends ISide {
     @Override
     protected void topSendStop(String name) {
         try {
-            var player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
+            ServerPlayerEntity player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
             if (player == null)
                 return;
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.STOP.ordinal());
-            send(player, buf);
+            send(player, PacketCodec.pack(ComType.STOP, null, 0));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c停止指令发送出错");
             e.printStackTrace();
@@ -104,18 +99,12 @@ public class SideFabric extends ISide {
     }
 
     @Override
-    public void sendMusic(String url) {
+    public void sendMusic(String data) {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (AllMusic.isOK(player.getName().getString(), null, false))
                     continue;
-
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.PLAY.ordinal());
-                writeString(buf, url);
-
-                send(player, buf);
-
+                send(player, PacketCodec.pack(ComType.PLAY, data, 0));
                 AllMusic.addNowPlayPlayer(player.getName().getString());
             }
         } catch (Exception e) {
@@ -125,18 +114,14 @@ public class SideFabric extends ISide {
     }
 
     @Override
-    protected void topSendMusic(String player, String url) {
+    protected void topSendMusic(String player, String data) {
         try {
-            var player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
+            ServerPlayerEntity player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
             if (player1 == null)
                 return;
             if (AllMusic.isOK(player, null, false))
                 return;
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.PLAY.ordinal());
-            writeString(buf, url);
-
-            send(player1, buf);
+            send(player1, PacketCodec.pack(ComType.PLAY, data, 0));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c歌曲指令发送出错");
             e.printStackTrace();
@@ -144,21 +129,16 @@ public class SideFabric extends ISide {
     }
 
     @Override
-    public void sendPic(String url) {
+    public void sendPic(String data) {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (AllMusic.isOK(player.getName().getString(), null, true))
                     continue;
                 String name = player.getName().getString();
                 SaveObj obj = HudUtils.get(name);
                 if (!obj.pic.enable)
                     continue;
-
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.IMG.ordinal());
-                writeString(buf, url);
-
-                send(player, buf);
+                send(player, PacketCodec.pack(ComType.IMG, data, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c图片指令发送出错");
@@ -167,18 +147,14 @@ public class SideFabric extends ISide {
     }
 
     @Override
-    public void sendPic(String player, String url) {
+    public void sendPic(String player, String data) {
         try {
-            var player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
+            ServerPlayerEntity player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
             if (player1 == null)
                 return;
             if (AllMusic.isOK(player1.getName().getString(), null, true))
                 return;
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.IMG.ordinal());
-            writeString(buf, url);
-
-            send(player1, buf);
+            send(player1, PacketCodec.pack(ComType.IMG, data, 0));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c图片指令发送出错");
             e.printStackTrace();
@@ -188,16 +164,12 @@ public class SideFabric extends ISide {
     @Override
     public void sendPos(String player, int pos) {
         try {
-            var player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
+            ServerPlayerEntity player1 = AllMusicFabric.server.getPlayerManager().getPlayer(player);
             if (player1 == null)
                 return;
             if (AllMusic.isOK(player1.getName().getString(), null, true))
                 return;
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.POS.ordinal());
-            buf.writeInt(pos);
-
-            send(player1, buf);
+            send(player1, PacketCodec.pack(ComType.POS, null, pos));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c清空Hud发生出错");
             e.printStackTrace();
@@ -207,19 +179,14 @@ public class SideFabric extends ISide {
     @Override
     public void sendHudLyric(String data) {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (AllMusic.isOK(player.getName().getString(), null, true))
                     continue;
                 String name = player.getName().getString();
                 SaveObj obj = HudUtils.get(name);
                 if (!obj.lyric.enable)
                     continue;
-
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.LYRIC.ordinal());
-                writeString(buf, data);
-
-                send(player, buf);
+                send(player, PacketCodec.pack(ComType.LYRIC, data, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c歌词发送出错");
@@ -230,19 +197,14 @@ public class SideFabric extends ISide {
     @Override
     public void sendHudInfo(String data) {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (AllMusic.isOK(player.getName().getString(), null, true))
                     continue;
                 String name = player.getName().getString();
                 SaveObj obj = HudUtils.get(name);
                 if (!obj.info.enable)
                     continue;
-
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.INFO.ordinal());
-                writeString(buf, data);
-
-                send(player, buf);
+                send(player, PacketCodec.pack(ComType.INFO, data, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c歌词信息发送出错");
@@ -253,16 +215,12 @@ public class SideFabric extends ISide {
     @Override
     public void sendHudPos(String name) {
         try {
-            var player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
+            ServerPlayerEntity player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
             if (player == null)
                 return;
             SaveObj obj = HudUtils.get(name);
             String data = AllMusic.gson.toJson(obj);
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.HUD.ordinal());
-            writeString(buf, data);
-
-            send(player, buf);
+            send(player, PacketCodec.pack(ComType.HUD, data, 0));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c界面位置发送出错");
             e.printStackTrace();
@@ -275,28 +233,24 @@ public class SideFabric extends ISide {
             if (pos == HudType.PIC) {
                 return;
             }
-            var player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
+            ServerPlayerEntity player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
             if (player == null)
                 return;
 
             if (AllMusic.isOK(name, null, true))
                 return;
 
-            ByteBuf buf = Unpooled.buffer();
             switch (pos) {
                 case INFO:
-                    buf.writeByte(ComType.INFO.ordinal());
+                    send(player, PacketCodec.pack(ComType.INFO, data, 0));
                     break;
                 case LIST:
-                    buf.writeByte(ComType.LIST.ordinal());
+                    send(player, PacketCodec.pack(ComType.LIST, data, 0));
                     break;
                 case LYRIC:
-                    buf.writeByte(ComType.LYRIC.ordinal());
+                    send(player, PacketCodec.pack(ComType.LYRIC, data, 0));
                     break;
             }
-            writeString(buf, data);
-
-            send(player, buf);
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c停止指令发送出错");
             e.printStackTrace();
@@ -306,19 +260,14 @@ public class SideFabric extends ISide {
     @Override
     public void sendHudList(String data) {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (AllMusic.isOK(player.getName().getString(), null, true))
                     continue;
                 String name = player.getName().getString();
                 SaveObj obj = HudUtils.get(name);
                 if (!obj.list.enable)
                     continue;
-
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.LIST.ordinal());
-                writeString(buf, data);
-
-                send(player, buf);
+                send(player, PacketCodec.pack(ComType.LIST, data, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c歌曲列表发送出错");
@@ -328,15 +277,12 @@ public class SideFabric extends ISide {
 
     @Override
     public void sendHudUtilsAll() {
-        for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+        for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
             String Name = player.getName().getString();
             try {
                 SaveObj obj = HudUtils.get(Name);
                 String data = AllMusic.gson.toJson(obj);
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.HUD.ordinal());
-                writeString(buf, data);
-                send(player, buf);
+                send(player, PacketCodec.pack(ComType.HUD, data, 0));
             } catch (Exception e1) {
                 AllMusic.log.warning("§d[AllMusic]§c数据发送发生错误");
                 e1.printStackTrace();
@@ -346,7 +292,7 @@ public class SideFabric extends ISide {
 
     @Override
     public void sendBar(String data) {
-        for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+        for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
             try {
                 if (AllMusic.isOK(player.getName().getString(), null, true))
                     continue;
@@ -361,14 +307,10 @@ public class SideFabric extends ISide {
     @Override
     public void clearHud(String name) {
         try {
-            var player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
+            ServerPlayerEntity player = AllMusicFabric.server.getPlayerManager().getPlayer(name);
             if (player == null)
                 return;
-
-            ByteBuf buf = Unpooled.buffer();
-            buf.writeByte(ComType.CLEAR.ordinal());
-
-            send(player, buf);
+            send(player, PacketCodec.pack(ComType.CLEAR, null, 0));
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c清空Hud发生出错");
             e.printStackTrace();
@@ -378,10 +320,8 @@ public class SideFabric extends ISide {
     @Override
     public void clearHud() {
         try {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
-                ByteBuf buf = Unpooled.buffer();
-                buf.writeByte(ComType.CLEAR.ordinal());
-                send(player, buf);
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+                send(player, PacketCodec.pack(ComType.CLEAR, null, 0));
             }
         } catch (Exception e) {
             AllMusic.log.warning("§d[AllMusic]§c清空Hud发生出错");
@@ -395,7 +335,7 @@ public class SideFabric extends ISide {
                 && data.length() > AllMusic.getConfig().messageLimitSize) {
             data = data.substring(0, AllMusic.getConfig().messageLimitSize - 1) + "...";
         }
-        for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+        for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
             if (!AllMusic.getConfig().mutePlayer.contains(player.getName().getString())) {
                 player.sendMessage(Text.of(data), false);
             }
@@ -413,9 +353,9 @@ public class SideFabric extends ISide {
                 && data.length() > AllMusic.getConfig().messageLimitSize) {
             data = data.substring(0, AllMusic.getConfig().messageLimitSize - 1) + "...";
         }
-        var finalData = Text.of(data);
+        Text finalData = Text.of(data);
         runTask(() -> {
-            for (var player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
+            for (ServerPlayerEntity player : AllMusicFabric.server.getPlayerManager().getPlayerList()) {
                 if (!AllMusic.getConfig().mutePlayer.contains(player.getName().getString())) {
                     player.sendMessage(finalData, false);
                 }
@@ -471,7 +411,7 @@ public class SideFabric extends ISide {
 
     @Override
     public List<String> getPlayerList() {
-        return List.of();
+        return Arrays.asList(AllMusicFabric.server.getPlayerNames());
     }
 
     private void send(ServerPlayerEntity players, ByteBuf data) {
@@ -483,11 +423,5 @@ public class SideFabric extends ISide {
             AllMusic.log.warning("§c数据发送发生错误");
             e.printStackTrace();
         }
-    }
-
-    private void writeString(ByteBuf buf, String data) {
-        byte[] temp = data.getBytes(StandardCharsets.UTF_8);
-        buf.writeInt(temp.length)
-                .writeBytes(temp);
     }
 }
